--- a/static/styles/styles.less
+++ b/static/styles/styles.less
@@ -28,6 +28,7 @@ a {
   
   &:hover {
     text-decoration: underline;
+    color: #019db9;
   }
 }
 
@@ -116,9 +117,26 @@ nav {
   padding-bottom: 25px;
   padding-top: 25px;
   border-top: solid 1px #ececec;
+  border-bottom: solid 1px white;
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.05);
   z-index: 4;
+  height: 23px;
+  overflow: hidden;
+
+  #navbar-buttons {
+    transition: top ease-in-out 200ms;
+    position: relative;
+    z-index: 1;
+    top: 0;
+  }
+
+  #navbar-logo {
+    height: 40px;
+    position: relative;
+    bottom: -30px;
+    transition: all ease-in-out 200ms;
+  }
 
   a {
     outline: none;
@@ -130,30 +148,46 @@ nav {
     padding: 7px 30px;
     border-radius: 20px;
     margin: 0 15px;
+    box-shadow: inset 0 0 0 1px #ececec;
 
     &:hover {
       background-color: #ffe576;
       text-decoration: none;
+      box-shadow: none;
+      color: @gray;
     }
   }
 
   .active {
     background-color: @red !important;
     color: white !important;
+    box-shadow: none;
   }
+}
+
+article {
+  position: relative;
+}
+
+.sitemark {
+  position: absolute;
+  top: -70px;
 }
 
 .about {
   padding-top: 60px;
+  padding-bottom: 60px;
 
   h3 {
     margin: 0;
     font-size: 22px;
+    letter-spacing: -1px;
   }
 
   p {
     font-size: 19px;
     text-align: justify;
+    margin-bottom: 0;
   }
 }
 
@@ -171,4 +205,134 @@ nav {
 
 .bold {
   font-weight: bold;
+}
+
+.my-designs {
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  padding-top: 30px;
+  padding-bottom: 50px;
+
+  a {
+    letter-spacing: 0;
+  }
+
+  h3 {
+    text-align: center;
+
+    span {
+      display: inline-block;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 13px;
+      padding: 7px 30px;
+      border-radius: 20px;
+      margin: 0 15px 40px;
+      background-color: @red !important;
+      color: white !important;
+    }
+
+    span {
+      position: relative;
+    }
+  }
+
+  .item {
+    margin-bottom: 100px;
+  }
+
+  .image-wrapper {
+    position: relative;
+    display: inline-block;
+    float: left;
+    margin-right: 40px;
+
+    .preview {
+      width: 390px;
+      border-radius: 10px;
+      display: block;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  .strip {
+      content: "";
+      width: 90px;
+      height: 15px;
+      position: absolute;
+      border-radius: 5px;
+    }
+
+  .strips-1 {
+    &::before {
+      .strip();
+      background: #ff5265;
+      transform: rotate(-45deg);
+      left: -26px;
+      top: 13px;
+    }
+
+    &::after {
+      .strip();
+      background: #20b4d0;
+      transform: rotate(-45deg);
+      right: -26px;
+      bottom: 13px;
+    }
+  }
+
+  .strips-2 {
+    .strips-1();
+
+    &::before {
+      .strip();
+      transform: rotate(45deg);
+      left: unset;
+      right: -26px;
+    }
+
+    &::after {
+      .strip();
+      background: #20b4d0;
+      transform: rotate(45deg);
+      left: -26px;
+    }
+  }
+
+  h4 {
+    font-weight: bold;
+    font-size: 22px;
+    letter-spacing: -1px;
+    margin-bottom: 5px;
+  }
+
+  h5 {
+    font-weight: normal;
+    font-size: 17px;
+    color: grey;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
+  p {
+    color: grey;
+  }
+
+  .tags {
+    a {
+      background: @gray;
+      border-radius: 20px;
+      padding: 3px 12px;
+      color: white;
+      font-size: 12px;
+      text-decoration: none;
+      margin-right: 5px;
+      opacity: 0.8;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
 }
