--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/montserratsubrayada/v12/U9MM6c-o9H7PgjlTHThBnNHGVUORwteQQHe3TcMW.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/montserratsubrayada/v15/U9MM6c-o9H7PgjlTHThBnNHGVUORwteQQHe3TcMW.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Cantarell';
@@ -59,6 +59,9 @@ body * {
   z-index: 5;
   position: relative;
 }
+#title-logo {
+  display: none;
+}
 #top-panel {
   text-align: center;
 }
@@ -104,6 +107,7 @@ h2 {
   text-transform: uppercase;
   color: grey;
   font-weight: bold;
+  font-size: 24px;
 }
 nav {
   position: sticky;
@@ -338,5 +342,38 @@ article {
   font-size: 19px;
   margin: 0 auto auto;
   max-width: 590px;
+}
+@media (max-width: 830px) {
+  .white-wrapper {
+    padding-bottom: 40px;
+  }
+  .white-wrapper #title-background {
+    display: none;
+  }
+  .white-wrapper #title-logo {
+    width: 80%;
+    display: block;
+    margin: 40px auto;
+  }
+}
+@media (max-width: 600px) {
+  h2 {
+    font-size: calc(100vw / 25);
+  }
+  .about {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .about .profile {
+    width: 80px;
+    margin-right: 20px;
+  }
+  .about h3 {
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+  .about p {
+    font-size: 14px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
