--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -232,7 +232,8 @@ article {
   margin-right: 40px;
 }
 .my-designs .image-wrapper .preview {
-  width: 390px;
+  max-width: 390px;
+  width: 100%;
   border-radius: 10px;
   display: block;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -319,7 +320,7 @@ article {
   font-size: 17px;
   color: grey;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .my-designs p {
   color: grey;
@@ -333,6 +334,8 @@ article {
   text-decoration: none;
   margin-right: 5px;
   opacity: 0.8;
+  display: inline-block;
+  margin-top: 7px;
 }
 .my-designs .tags a:hover {
   opacity: 1;
@@ -342,6 +345,15 @@ article {
   font-size: 19px;
   margin: 0 auto auto;
   max-width: 590px;
+}
+@media (max-width: 920px) {
+  .my-designs .item {
+    margin-bottom: 40px;
+  }
+  .my-designs .image-wrapper {
+    float: unset;
+    margin-right: 0;
+  }
 }
 @media (max-width: 830px) {
   .white-wrapper {
@@ -373,7 +385,7 @@ article {
     margin-bottom: 25px;
   }
   .about p {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
